--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
     "stripe": "^12.12.0"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
